--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Your API Key for OpenAI
-OPENAI_API_KEY=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
+OPENAI_API_KEY=   
 # Provide proxy for OpenAI API. e.g. http://127.0.0.1:7890
 HTTPS_PROXY=
 # Custom base url for OpenAI API. default: https://api.openai.com
